--- a/package.json
+++ b/package.json
@@ -2,18 +2,6 @@
   "name": "github-finder",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/user-event": "^13.5.0",
-    "daisyui": "^5.0.54",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-icons": "^4.12.0",
-    "react-router-dom": "^6.22.3",
-    "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -38,9 +26,21 @@
       "last 1 safari version"
     ]
   },
+  "dependencies": {
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-scripts": "^5.0.1",
+    "react-router-dom": "^6.22.3",
+    "react-icons": "^4.12.0",
+    "daisyui": "^5.0.54",
+    "tailwindcss": "^3.4.13",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/user-event": "^13.5.0",
+    "web-vitals": "^2.1.4"
+  },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.13"
+    "postcss": "^8.5.6"
   }
 }
