--- a/package.json
+++ b/package.json
@@ -37,10 +37,9 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/user-event": "^13.5.0",
-    "web-vitals": "^2.1.4"
-  },
-  "devDependencies": {
+    "web-vitals": "^2.1.4",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6"
-  }
+  },
+  "devDependencies": {}
 }
