--- a/package.json
+++ b/package.json
@@ -1,45 +1,25 @@
 {
-  "name": "github-finder",
-  "version": "0.1.0",
+  "name": "my-app",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
+    "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-scripts": "^5.0.1",
-    "react-router-dom": "^6.22.3",
-    "react-icons": "^4.12.0",
-    "daisyui": "^5.0.54",
-    "tailwindcss": "^3.4.13",
-    "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/user-event": "^13.5.0",
-    "web-vitals": "^2.1.4",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@vitejs/plugin-react": "^5.0.3",
+    "autoprefixer": "^10.4.14",
+    "daisyui": "^3.2.2",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.3",
+    "vite": "^5.0.0"
+  }
 }
